--- a/localization/xliff/enu/constants/localizedConstants.enu.xlf
+++ b/localization/xliff/enu/constants/localizedConstants.enu.xlf
@@ -48,7 +48,7 @@
             <source xml:lang="en">Confirm to clear recent connections list</source>
         </trans-unit>
         <trans-unit id="msgOpenSqlFile">
-            <source xml:lang="en">To use this command, Open a .sql file -or- Change editor language to "SQL" -or- Select T-SQL text in the active SQL editor.</source>
+            <source xml:lang="en">To use this command, Open a .sql file -or- Change editor language to "SQL"</source>
         </trans-unit>
         <trans-unit id="recentConnectionsPlaceholder">
             <source xml:lang="en">Choose a connection profile from the list below</source>
